adding content to the tabs

--- a/index.html
+++ b/index.html
@@ -57,29 +57,36 @@
 
     <div id="fit-guide" class="tab-content">
       <p>
-        <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. -->
-        1
+        Integer ver arcu dolor tincidunt dapibus. Nam sit amet lacinia velit.
+        Pellentesque vel urna diam. Nunc sit amet just malesuada, tincidunt
+        massa eu, placerat est. Suspendisse commodo pellentesque gravida. Donec
+        suspicit vulputate odio, at eleifend purus condimentum in. Praesent sed
+        cursus sem. Donec mattis urna efficitur diam agittis, id maximus orci
+        dictum. Etiam non congue felis, et varius augue. Aliquam et ullamcorper
+        massa, Nullam interdum lobortis volutpat. Etiam leo arcu, vulputate vel
+        commodo sit amet, ullamcorper varius dui.
       </p>
     </div>
     <div id="care" class="tab-content">
       <p>
-        <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. -->
-        2
+        Quisque a turpis fermentum, dapibus mauris quis, dignissim ligula.
+        Aliquam aliquet tellus nunc, non fermentum leo dictum vel. Morbi
+        vehicula laoreet felis ac blandit. Sed mi urna, feugiat nec rhoncus
+        vitae, sollicitudin non dul. Vestibulum in porttitor urna, ut posuere
+        elit. Suspendisse mi magna, mosletie nec allquam id, porttitor in ante.
+        Nullam posuere ipsum odio, at placerat ante eleifend vitae. Suspendisse
+        vestibulum magna pretium velit venenatis venenatis. Donec dapibus, just
+        ut aliquam varius, quam tortor dignissim tellus, imperdiet scelerisque
+        risus ex magna. Nunc sed purus nibh. Phasellus elit erat, scelerisque
+        sed volutpat non, interdum vitae urna.
       </p>
     </div>
     <div id="materials" class="tab-content">
       <p>
-        <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. -->
-        3
+        commodo consequat.
       </p>
     </div>
 
