added subtabs to accordion

--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
       </div>
       <button class="accordion">MATERIALS</button>
       <div class="description">
+        <div class="sub-tab-container">
+          <div class="sub-tab">
+            <button class="tab-link" onclick="openTab(event, 'care')">
+              50%
+            </button>
+            <div>cashmere</div>
+          </div>
+          <div class="sub-tab">
+            <button class="tab-link" onclick="openTab(event, 'care')">
+              46%
+            </button>
+            <div id="title4" class="active-sub-tab">wool</div>
+          </div>
+          <div class="sub-tab">
+            <button class="tab-link" onclick="openTab(event, 'care')">
+              4%
+            </button>
+            <div>modal</div>
+          </div>
+        </div>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nullam nibh
           arcu, ultricies nec purus quis, consequat luctus orci. Sed non mi
@@ -83,6 +103,26 @@
         </p>
       </div>
       <div id="materials" class="tab-content">
+        <div class="sub-tab-container">
+          <div class="sub-tab">
+            <button class="tab-link" onclick="openTab(event, 'care')">
+              50%
+            </button>
+            <div>cashmere</div>
+          </div>
+          <div class="sub-tab">
+            <button class="tab-link" onclick="openTab(event, 'care')">
+              46%
+            </button>
+            <div id="title4" class="active-sub-tab">wool</div>
+          </div>
+          <div class="sub-tab">
+            <button class="tab-link" onclick="openTab(event, 'care')">
+              4%
+            </button>
+            <div>modal</div>
+          </div>
+        </div>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nullam nibh
           arcu, ultricies nec purus quis, consequat luctus orci. Sed non mi
